# odyssey-database

./: CMakeLists.txt  main.cpp
DataBase/: Metadata.cpp  Metadata.h  Query.cpp  Query.h  QueryManager.cpp  QueryManager.h  Userdata.cpp  Userdata.h  database.json  output.json
DataStructures/: Node.h  SimpleLinkedList.h
XML/: XML_Editor.cpp  XML_Editor.h
